--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-minimal-boilerplate",
-  "version": "1.0.0",
-  "description": "A minimal reactJS one page app boilerplate using Webpack",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "A minimal reactJS one page app boilerplate using Webpack & typescript",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "javascript",
+    "typescript",
     "react",
     "boilerplate",
     "webpack"
@@ -15,22 +15,25 @@
   "author": "Vinicius Deboni Falavigna",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.5.3",
-    "precss": "^1.4.0",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0"
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-react": "^7.18.0",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.19.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
