[BUILD] add testing framework

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es2020",
+    "baseUrl": ".",
     "jsx": "react"
-  }
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.test.tsx"]
 }
