--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A minimal reactJS one page app boilerplate using Webpack & typescript",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack-dev-server --open",
+    "test": "jest"
   },
   "keywords": [
     "typescript",
@@ -15,15 +17,22 @@
   "author": "Vinicius Deboni Falavigna",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^25.1.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
+    "babel-jest": "^25.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-react": "^7.18.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
