--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal reactJS one page app boilerplate using Webpack & typescript",
   "main": "index.ts",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack-prod.config.js",
     "start": "webpack-dev-server --open",
     "test": "jest"
   },
@@ -24,6 +24,7 @@
     "@types/jest": "^25.1.1",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/styled-components": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "babel-jest": "^25.1.0",
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1"
   }
 }
